# window_translation

./: .gitignore  README.md  build_exe.bat  pyproject.toml  requirements-optional.txt  requirements.txt  window_translation.spec
.github/workflows/: release.yml
src/window_translation/: __init__.py  __main__.py  app.py
src/window_translation/capture/: __init__.py  screen.py  selector.py
src/window_translation/config/: __init__.py  secrets.py  settings.py
src/window_translation/history/: __init__.py  export.py  store.py
src/window_translation/ocr/: __init__.py  paddleocr_backend.py  tesseract.py
src/window_translation/overlay/: __init__.py  history_viewer.py  result.py  settings_dialog.py  theme.py
src/window_translation/translate/: __init__.py  base.py  cache.py  factory.py  openai_client.py  stub.py
tests/: test_capture.py  test_history.py  test_new_features.py  test_ocr.py  test_secrets.py  test_settings.py  test_translate.py
